# autorig

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  FEATURE_EXAMPLES.md  IMPROVEMENTS.md  README.md  RELEASE_NOTES.md  pyproject.toml  requirements-dev.txt  requirements.txt  rig.example.yaml  setup.py
.github/workflows/: ci.yml  release.yml  test.yml
docs/: README.md  cli.md  configuration.md  index.md  plugins.md
examples/: README.md  basic-dev.yaml  minimal.yaml  profiles-example.yaml  python-dev.yaml  web-dev.yaml
examples/git/: .gitconfig.j2
examples/shell/: .bashrc  .zshrc
src/autorig/: __init__.py  backup.py  cli.py  cli_utils.py  config.py  core.py  dependency_graph.py  exceptions.py  lazy_imports.py  logger.py  monitoring.py  multiuser.py  notifications.py  plugins.py  profiles.py  python_plugin.py  remote.py  schema.py  state.py  templates.py  templating.py  utils.py
src/autorig/exporters/: devcontainer.py
src/autorig/installers/: __init__.py  alpine.py  base.py  linux.py  macos.py  windows.py
src/autorig/services/: __init__.py  dotfile_service.py  git_operations.py  git_service.py  hook_service.py  package_operations.py  package_service.py
templates/python/: .gitignore.j2
tests/: conftest.py  test_backup.py  test_cli_utils.py  test_config.py  test_enhanced_cli.py  test_installers.py  test_integration.py  test_new_features.py  test_templates.py  test_templating.py  test_windows_installer.py
