[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "autorig"
version = "0.1.0"
description = "A declarative development environment bootstrapper"
authors = [
  { name = "Dacraezy1", email = "younesaouzal18@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "PyYAML>=6.0",
]

[project.scripts]
autorig = "autorig.cli:app"

[tool.setuptools.packages.find]
where = ["src"]